--- a/easyname_management copy.html
+++ b/easyname_management copy.html
@@ -35,7 +35,8 @@
                         <div id="sex" class="sex_1">
                             <label><input type="radio" name="sex" value="女性" class="danjo">
                                 女性</label>
-                            <label><input type="radio" name="sex" value="男性" class="danjo">男性</label>
+                            <label><input type="radio" name="sex" value="男性" class="danjo"><span
+                                    class="otoko">男性</span></label>
                             <label><input type="radio" name="sex" value="その他" class="danjo">
                                 その他</label>
                         </div>
@@ -50,7 +51,8 @@
 
                             <label><input type="radio" name="scene" value="会食" class="danjo">
                                 会食</label>
-                            <label><input type="radio" name="scene" value="プライベート" class="danjo">プライベート</label>
+                            <label><input type="radio" name="scene" value="プライベート" class="danjo"><span
+                                    class="otoko">プライベート</span></label>
 
                         </div>
                     </form>
@@ -84,6 +86,7 @@
         </div>
 
         <div id="search" class="content">
+            <h2>思い出したい人</h2>
 
             <dl class="tex">
                 <dt>性別</dt>
@@ -92,7 +95,8 @@
                         <div id="sexsearh" class="sex_1">
                             <label><input type="radio" name="sex_search" value="女性" class="danjo">
                                 女性</label>
-                            <label><input type="radio" name="sex_search" value="男性" class="danjo">男性</label>
+                            <label><input type="radio" name="sex_search" value="男性" class="danjo"><span
+                                    class="otoko"></span>男性</label>
                             <label><input type="radio" name="sex_search" value="その他" class="danjo">
                                 その他</label>
                         </div>
@@ -108,7 +112,8 @@
 
                             <label><input type="radio" name="scene_search" value="会食" class="danjo">
                                 会食</label>
-                            <label><input type="radio" name="scene_search" value="プライベート" class="danjo">プライベート</label>
+                            <label><input type="radio" name="scene_search" value="プライベート" class="danjo"><span
+                                    class="otoko">プライベート</span>></label>
 
                         </div>
                     </form>
@@ -116,7 +121,7 @@
             </dl>
 
             <div id="searchresult">
-                <h2>思い出したい人</h2>
+
 
             </div>
         </div>
@@ -165,7 +170,8 @@
 
                 localStorage.setItem(`${memoCount}`, jsonchunk);
                 localStorage.setItem("memoCount", memoCount + 1);
-                record.innerHTML += `<div class=box> <dl class=profile><dt class=profileinfo>お名前</dt><dd>${(chunk.titile)}</dd></dl><dl class=profile><dt class=profileinfo>エピソード</dt><dd>${(chunk.text)}</dd></dl><dl class=profile><dt class=profileinfo>会ったシーン</dt>
+                let chunktext = (chunk.text).replace(/\n/g, "<br>");
+                record.innerHTML += `<div class=box> <dl class=profile><dt class=profileinfo>お名前</dt><dd>${(chunk.titile)}</dd></dl><dl class=profile><dt class=profileinfo>エピソード</dt><dd>${(chunktext)}</dd></dl><dl class=profile><dt class=profileinfo>会ったシーン</dt>
                     <dd>${(chunk.sien)}</dd></dl><dl class=profile><dt class=profileinfo>性別</dt><dd>${(chunk.danjo)}</dd></dl></div >`;
 
 
@@ -181,7 +187,8 @@
                     console.log(localStorage);
                     let chunk = JSON.parse(jsonchunk);
                     console.log(chunk);
-                    record.innerHTML += `<div class=box> <dl class=profile><dt class=profileinfo>お名前</dt><dd>${(chunk.titile)}</dd></dl><dl class=profile><dt class=profileinfo>エピソード</dt><dd>${(chunk.text)}</dd></dl><dl class=profile><dt class=profileinfo>会ったシーン</dt>
+                    let chunktext = (chunk.text).replace(/\n/g, "<br>");
+                    record.innerHTML += `<div class=box> <dl class=profile><dt class=profileinfo>お名前</dt><dd>${(chunk.titile)}</dd></dl><dl class=profile><dt class=profileinfo>エピソード</dt><dd>${(chunktext)}</dd></dl><dl class=profile><dt class=profileinfo>会ったシーン</dt>
                     <dd>${(chunk.sien)}</dd></dl><dl class=profile><dt class=profileinfo>性別</dt><dd>${(chunk.danjo)}</dd></dl></div >`;
 
 
@@ -222,7 +229,10 @@
                         console.log(chunks.titile);
 
                         let searchresult = document.getElementById("searchresult");
-                        searchresult.innerHTML += `<div class=box> <dl class=profile><dt class=profileinfo>お名前</dt><dd>${chunks.titile}</dd></dl><dl class=profile><dt class=profileinfo>エピソード</dt><dd>${chunks.text}</dd></dl><dl class=profile><dt class=profileinfo>会ったシーン</dt>
+                        let chunktexts = (chunks.text).replace(/\n/g, "<br>");
+
+                        searchresult.innerHTML += `<div class=box> <dl class=profile><dt class=profileinfo>お名前</dt><dd>${chunks.titile}</dd></dl><dl class=profile><dt class=profileinfo>エピソード</dt><dd>${chunktexts
+                            }</dd></dl><dl class=profile><dt class=profileinfo>会ったシーン</dt>
                     <dd>${chunks.sien}</dd></dl><dl class=profile><dt class=profileinfo>性別</dt><dd>${chunks.danjo}</dd></dl></div >`;
 
                     };
@@ -249,7 +259,11 @@
                         console.log(chunks);
 
                         let searchresult = document.getElementById("searchresult");
-                        searchresult.innerHTML += `<div class=box> <dl class=profile><dt class=profileinfo>お名前</dt><dd>${chunks.titile}</dd></dl><dl class=profile><dt class=profileinfo>エピソード</dt><dd>${chunks.text}</dd></dl><dl class=profile><dt class=profileinfo>会ったシーン</dt>
+
+                        let chunktexts = (chunks.text).replace(/\n/g, "<br>");
+
+                        searchresult.innerHTML += `<div class=box> <dl class=profile><dt class=profileinfo>お名前</dt><dd>${chunks.titile}</dd></dl><dl class=profile><dt class=profileinfo>エピソード</dt><dd>${chunktexts
+                            }</dd></dl><dl class=profile><dt class=profileinfo>会ったシーン</dt>
                     <dd>${chunks.sien}</dd></dl><dl class=profile><dt class=profileinfo>性別</dt><dd>${chunks.danjo}</dd></dl></div >`;
 
                     }
